fixed margins and styles of GenresChip2, scrollbar style and changed colors of episode, duration, score  and airing timer text

--- a/src/components/CardViewV2/GenresChip2/genreschipv2.module.css
+++ b/src/components/CardViewV2/GenresChip2/genreschipv2.module.css
@@ -7,6 +7,7 @@
   outline: none;
   margin-top: 10px;
   margin-left: 5px;
+  margin-right: 5px;
   font-size: 12px;
   border-radius: 16px;
 }
